--- a/international-committee/Aicha-Bah-Diallo.html
+++ b/international-committee/Aicha-Bah-Diallo.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manish Jain</title>
+    <title>Aïcha Bah Diallo</title>
     <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../vendor/css/bootstrap.min.css">
     <link rel="stylesheet" href="../vendor/css/owl.carousel.min.css">
@@ -18,16 +18,16 @@
         <section class="international-page p-top p-bottom">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-7">
+                    <div class="col-lg-7 col-md-12">
                         <div class="content-wrapper">
-                            <h2 class="heading-primary">Manish Jain</h2>
-                            <h4 class="sub-heading">Founder Shikshantar Andolan and Swaraj University</h4>
+                            <h2 class="heading-primary">Aïcha Bah Diallo</h2>
+                            <h4 class="sub-heading">Former Minister of Education in Guinea</h4>
                             <div class="content-para">
-                                <p>Manish Jain is the founder of Shikshantar Andolan and Swaraj University in Udaipur, India. A pioneer in alternative education, he advocates for self-designed learning, unschooling, and cultural regeneration. His initiatives include Creativity Adda and Learning Societies Unconference, which challenge traditional schooling systems and promote community-driven learning models. Jain’s work focuses on fostering creativity, gift culture, and urban organic farming. A graduate of Harvard and Brown universities, he actively engages in intercultural dialogue and filmmaking to inspire broader societal change.</p>
+                                <p>Aïcha Bah Diallo is a former Minister of Education in Guinea (1989–1996) and a trailblazer in advancing girls’ education across Africa. Under her leadership, school enrollment among girls in Guinea doubled, marking a significant milestone in gender equity. She co-founded the Forum for African Women Educationalists (FAWE) and worked with UNESCO to improve female education globally. Diallo has received numerous accolades, including the French Ordre des Palmes Académiques and has been recognized as one of Africa’s 100 Most Influential People for her unwavering commitment to education and women’s empowerment.</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-5">
+                    <div class="col-lg-5 col-md-12">
                         <div class="banner-top">
                             <div class="banner-img">
                                 <img src="../images/visionaries/education-09.jpg" alt="" class="img-fluid"> 
