--- a/international-committee/Dr-Bharti-Gandhi.html
+++ b/international-committee/Dr-Bharti-Gandhi.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manish Jain</title>
+    <title>Dr. Bharti Gandhi</title>
     <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../vendor/css/bootstrap.min.css">
     <link rel="stylesheet" href="../vendor/css/owl.carousel.min.css">
@@ -18,16 +18,16 @@
         <section class="international-page p-top p-bottom">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-7">
+                    <div class="col-lg-7 col-md-12">
                         <div class="content-wrapper">
-                            <h2 class="heading-primary">Manish Jain</h2>
-                            <h4 class="sub-heading">Founder Shikshantar Andolan and Swaraj University</h4>
+                            <h2 class="heading-primary">Dr. Bharti Gandhi</h2>
+                            <h4 class="sub-heading">Co-Founder, City Montessori School (CMS), Child Psychologist</h4>
                             <div class="content-para">
-                                <p>Manish Jain is the founder of Shikshantar Andolan and Swaraj University in Udaipur, India. A pioneer in alternative education, he advocates for self-designed learning, unschooling, and cultural regeneration. His initiatives include Creativity Adda and Learning Societies Unconference, which challenge traditional schooling systems and promote community-driven learning models. Jain’s work focuses on fostering creativity, gift culture, and urban organic farming. A graduate of Harvard and Brown universities, he actively engages in intercultural dialogue and filmmaking to inspire broader societal change.</p>
+                                <p>Dr. Bharti Gandhi is the co-founder of City Montessori School (CMS) in Lucknow, recognized as the world's largest school by Guinness World Records. A visionary educator, she has dedicated her life to promoting peace through education while empowering women globally. Her contributions have earned her prestigious awards, along with her husband like the Culture of Peace Award from Japan’s Goi Peace Foundation. They jointly received the UNESCO Prize for Peace Education in 2002 for their contributions to fostering global citizenship through education. Dr. Bharti Gandhi has also been honored with the DEVI Award by the Sunday Standard and the UP Ratan Award for her remarkable contributions to education and social development</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-5">
+                    <div class="col-lg-5 col-md-12">
                         <div class="banner-top">
                             <div class="banner-img">
                                 <img src="../images/visionaries/education-01.jpg" alt="" class="img-fluid"> 
