--- a/international-committee/Dr-Sunita-Gandhi.html
+++ b/international-committee/Dr-Sunita-Gandhi.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manish Jain</title>
+    <title>Dr. Sunita Gandhi</title>
     <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../vendor/css/bootstrap.min.css">
     <link rel="stylesheet" href="../vendor/css/owl.carousel.min.css">
@@ -18,16 +18,16 @@
         <section class="international-page p-top p-bottom">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-7">
+                    <div class="col-lg-7 col-md-12">
                         <div class="content-wrapper">
-                            <h2 class="heading-primary">Manish Jain</h2>
-                            <h4 class="sub-heading">Founder Shikshantar Andolan and Swaraj University</h4>
+                            <h2 class="heading-primary">Dr. Sunita Gandhi</h2>
+                            <h4 class="sub-heading">Educator, Researcher, Author, and Innovator</h4>
                             <div class="content-para">
-                                <p>Manish Jain is the founder of Shikshantar Andolan and Swaraj University in Udaipur, India. A pioneer in alternative education, he advocates for self-designed learning, unschooling, and cultural regeneration. His initiatives include Creativity Adda and Learning Societies Unconference, which challenge traditional schooling systems and promote community-driven learning models. Jain’s work focuses on fostering creativity, gift culture, and urban organic farming. A graduate of Harvard and Brown universities, he actively engages in intercultural dialogue and filmmaking to inspire broader societal change.</p>
+                                <p>Dr. Sunita Gandhi is an educator, researcher, author, and innovator behind ALfA (Accelerating Learning for All), a transformative pedagogy addressing quality K12 education, and foundational literacy and numeracy (FLN) gaps globally. A Cambridge PhD in Physics, she founded DEVI Sansthan and Council for Global Education to serve millions of disadvantaged children through groundbreaking initiatives like One Tara Free Alternative School. Dr. Sunita Gandhi has received several accolades, including "Educator of the Year 2014" by the India Book of Records and "Visionary of Uttar Pradesh" by Dainik Bhaskar in 2017. In 2025, she was honored with the FICCI FLO Award in Education for her outstanding contributions to FLN. </p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-5">
+                    <div class="col-lg-5 col-md-12">
                         <div class="banner-top">
                             <div class="banner-img">
                                 <img src="../images/visionaries/education-02.jpg" alt="" class="img-fluid"> 
