--- a/international-committee/Irmeli-Halinen.html
+++ b/international-committee/Irmeli-Halinen.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manish Jain</title>
+    <title>Irmeli Halinen</title>
     <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../vendor/css/bootstrap.min.css">
     <link rel="stylesheet" href="../vendor/css/owl.carousel.min.css">
@@ -18,16 +18,16 @@
         <section class="international-page p-top p-bottom">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-7">
+                    <div class="col-lg-7 col-md-12">
                         <div class="content-wrapper">
-                            <h2 class="heading-primary">Manish Jain</h2>
-                            <h4 class="sub-heading">Founder Shikshantar Andolan and Swaraj University</h4>
+                            <h2 class="heading-primary">Irmeli Halinen</h2>
+                            <h4 class="sub-heading">Former Head of Curriculum Development at the Finnish National Agency for Education</h4>
                             <div class="content-para">
-                                <p>Manish Jain is the founder of Shikshantar Andolan and Swaraj University in Udaipur, India. A pioneer in alternative education, he advocates for self-designed learning, unschooling, and cultural regeneration. His initiatives include Creativity Adda and Learning Societies Unconference, which challenge traditional schooling systems and promote community-driven learning models. Jain’s work focuses on fostering creativity, gift culture, and urban organic farming. A graduate of Harvard and Brown universities, he actively engages in intercultural dialogue and filmmaking to inspire broader societal change.</p>
+                                <p>Irmeli Halinen is the former Head of Curriculum Development at the Finnish National Agency for Education, where she spearheaded transformative reforms in Finland’s education system from 2014 to 2017. Her work emphasized inclusivity, creativity, and personalized learning approaches, aiming to foster student engagement and holistic development. Halinen championed collaborative curriculum reform processes that involved teachers, students, parents, and civil society organizations, ensuring transparency and shared ownership. Her efforts helped establish Finland’s reputation as a global leader in equitable and high-quality education.</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-5">
+                    <div class="col-lg-5 col-md-12">
                         <div class="banner-top">
                             <div class="banner-img">
                                 <img src="../images/visionaries/education-08.jpg" alt="" class="img-fluid"> 
