--- a/international-committee/Jon-Corippo.html
+++ b/international-committee/Jon-Corippo.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manish Jain</title>
+    <title>Jon Corippo</title>
     <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../vendor/css/bootstrap.min.css">
     <link rel="stylesheet" href="../vendor/css/owl.carousel.min.css">
@@ -18,16 +18,16 @@
         <section class="international-page p-top p-bottom">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-7">
+                    <div class="col-lg-7 col-md-12">
                         <div class="content-wrapper">
-                            <h2 class="heading-primary">Manish Jain</h2>
-                            <h4 class="sub-heading">Founder Shikshantar Andolan and Swaraj University</h4>
+                            <h2 class="heading-primary">Jon Corippo</h2>
+                            <h4 class="sub-heading">Award-winning educator and EdTech innovator</h4>
                             <div class="content-para">
-                                <p>Manish Jain is the founder of Shikshantar Andolan and Swaraj University in Udaipur, India. A pioneer in alternative education, he advocates for self-designed learning, unschooling, and cultural regeneration. His initiatives include Creativity Adda and Learning Societies Unconference, which challenge traditional schooling systems and promote community-driven learning models. Jain’s work focuses on fostering creativity, gift culture, and urban organic farming. A graduate of Harvard and Brown universities, he actively engages in intercultural dialogue and filmmaking to inspire broader societal change.</p>
+                                <p>Eduprotocols co-creator Jon Corippo describes himself as a “formerly disgruntled student.” He made it almost all the way through school with a 2.9 GPA. Jon graduated from college with no intention of teaching. After rising to a county-level Assistant Superintendent role, followed by running one of the largest educational non-profits in CA, Jon spent 2020-21 teaching 6th grade “human children'' in Madera County in Central California. Eduprotocols went from being Jon’s hobby to becoming his full-time work in 2022. Jon presents worldwide, helping teachers to “Teach Better Work Less”. Jon has been recognized as a County Teacher of the Year, a 20 to Watch Educator by the NSBA, and named a Top 100 Influencer by EdTech Digest. The Eduprotocols book series has sold nearly 70,000 copies worldwide, and Jon has done over 850 live classroom demos in 6 states and five countries since 2021.</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-5">
+                    <div class="col-lg-5 col-md-12">
                         <div class="banner-top">
                             <div class="banner-img">
                                 <img src="../images/visionaries/education-06.jpg" alt="" class="img-fluid"> 
