--- a/international-committee/Michaël-Feneux.html
+++ b/international-committee/Michaël-Feneux.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manish Jain</title>
+    <title>Michaël Feneux</title>
     <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../vendor/css/bootstrap.min.css">
     <link rel="stylesheet" href="../vendor/css/owl.carousel.min.css">
@@ -18,16 +18,16 @@
         <section class="international-page p-top p-bottom">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-7">
+                    <div class="col-lg-7 col-md-12">
                         <div class="content-wrapper">
-                            <h2 class="heading-primary">Manish Jain</h2>
-                            <h4 class="sub-heading">Founder Shikshantar Andolan and Swaraj University</h4>
+                            <h2 class="heading-primary">Michaël Feneux</h2>
+                            <h4 class="sub-heading">French artist, builder, and innovator specializing in zome construction</h4>
                             <div class="content-para">
-                                <p>Manish Jain is the founder of Shikshantar Andolan and Swaraj University in Udaipur, India. A pioneer in alternative education, he advocates for self-designed learning, unschooling, and cultural regeneration. His initiatives include Creativity Adda and Learning Societies Unconference, which challenge traditional schooling systems and promote community-driven learning models. Jain’s work focuses on fostering creativity, gift culture, and urban organic farming. A graduate of Harvard and Brown universities, he actively engages in intercultural dialogue and filmmaking to inspire broader societal change.</p>
+                                <p>Michaël Feneux is an artist-builder. He creates symbiotic architectures in resonance with the living. A sculptor of harmonies and a French advocate of sustainable construction techniques, this climate designer specializes in sacred geometry and the creation of zomes, unique geometric structures composed of diamonds arranged in a double spiral. His work emphasizes artistic expression, the efficiency of materials, the circular shape, and a consideration of environmental sustainability. His recent creation, the Tear of Midas, was presented at the 14th Wood Construction Forum in 2025 under the emblematic vault of the Grand Palais. This structure symbolizes humanity's awareness of the consequences of unbridled, consumerist development and its current impact on our common future. It is a symbol of beauty and hope that invites us to unite by re-enchanting the act of building in symbiosis with nature.  Nature is so precious, putting it back at the heart of our lives, reconsidering its sacred function opens us to a perspective of sustainable humanity. Michaël Feneux's work highlights the potential of zomes as ecological and mimetic architecture of the 21st century, modular and transportable, it combines art and innovation, and invites us to meditation and contemplation. Small is beautiful! The infinitely large is also the infinitely small... Let us find our place in the universe.</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-5">
+                    <div class="col-lg-5 col-md-12">
                         <div class="banner-top">
                             <div class="banner-img">
                                 <img src="../images/visionaries/education-13.jpg" alt="" class="img-fluid"> 
