--- a/international-committee/Pirjo-Koivula.html
+++ b/international-committee/Pirjo-Koivula.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manish Jain</title>
+    <title>Pirjo Koivula</title>
     <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../vendor/css/bootstrap.min.css">
     <link rel="stylesheet" href="../vendor/css/owl.carousel.min.css">
@@ -18,16 +18,16 @@
         <section class="international-page p-top p-bottom">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-7">
+                    <div class="col-lg-7 col-md-12">
                         <div class="content-wrapper">
-                            <h2 class="heading-primary">Manish Jain</h2>
-                            <h4 class="sub-heading">Founder Shikshantar Andolan and Swaraj University</h4>
+                            <h2 class="heading-primary">Pirjo Koivula</h2>
+                            <h4 class="sub-heading">Finnish educator and policymaker known for her contributions to inclusive education and early intervention reforms</h4>
                             <div class="content-para">
-                                <p>Manish Jain is the founder of Shikshantar Andolan and Swaraj University in Udaipur, India. A pioneer in alternative education, he advocates for self-designed learning, unschooling, and cultural regeneration. His initiatives include Creativity Adda and Learning Societies Unconference, which challenge traditional schooling systems and promote community-driven learning models. Jain’s work focuses on fostering creativity, gift culture, and urban organic farming. A graduate of Harvard and Brown universities, he actively engages in intercultural dialogue and filmmaking to inspire broader societal change.</p>
+                                <p>Pirjo Koivula is a Finnish educator and policymaker known for her contributions to inclusive education and early intervention reforms. She played a pivotal role in drafting Finland’s early intervention law, ensuring preventive support for students with diverse learning needs. For her groundbreaking work, she was knighted with the Order of the White Rose of Finland. Koivula serves as Counsellor of Education at the Finnish National Agency for Education and collaborates internationally on projects focused on special needs education and accessibility. </p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-5">
+                    <div class="col-lg-5 col-md-12">
                         <div class="banner-top">
                             <div class="banner-img">
                                 <img src="../images/visionaries/education-12.jpg" alt="" class="img-fluid"> 
