--- a/international-committee/Vijay-Sinha.html
+++ b/international-committee/Vijay-Sinha.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manish Jain</title>
+    <title>Vijay Sinha</title>
     <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../vendor/css/bootstrap.min.css">
     <link rel="stylesheet" href="../vendor/css/owl.carousel.min.css">
@@ -18,16 +18,16 @@
         <section class="international-page p-top p-bottom">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-7">
+                    <div class="col-lg-7 col-md-12">
                         <div class="content-wrapper">
-                            <h2 class="heading-primary">Manish Jain</h2>
-                            <h4 class="sub-heading">Founder Shikshantar Andolan and Swaraj University</h4>
+                            <h2 class="heading-primary">Vijay Sinha</h2>
+                            <h4 class="sub-heading">Founder Skyline Architectural Consultants</h4>
                             <div class="content-para">
-                                <p>Manish Jain is the founder of Shikshantar Andolan and Swaraj University in Udaipur, India. A pioneer in alternative education, he advocates for self-designed learning, unschooling, and cultural regeneration. His initiatives include Creativity Adda and Learning Societies Unconference, which challenge traditional schooling systems and promote community-driven learning models. Jain’s work focuses on fostering creativity, gift culture, and urban organic farming. A graduate of Harvard and Brown universities, he actively engages in intercultural dialogue and filmmaking to inspire broader societal change.</p>
+                                <p>Vijay Sinha is the founder of Skyline Architectural Consultants, a leading firm specializing in innovative building designs and sustainable architecture across India. He is credited with designing iconic structures like Lucknow's Ekana Stadium and the Hanumat Dham with its 108-foot Hanuman statue. With nearly three decades of experience, Sinha has contributed significantly to green building practices, urban planning, and landmark architectural projects that blend functionality with aesthetics. His firm also excels in HVAC systems, landscaping, and construction management for diverse projects across India.</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-5">
+                    <div class="col-lg-5 col-md-12">
                         <div class="banner-top">
                             <div class="banner-img">
                                 <img src="../images/visionaries/education-05.jpg" alt="" class="img-fluid"> 
