--- a/international-committee/Inger-Mette-Stenseth.html
+++ b/international-committee/Inger-Mette-Stenseth.html
@@ -18,7 +18,7 @@
         <section class="international-page p-top p-bottom">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-7">
+                    <div class="col-lg-7 col-md-12">
                         <div class="content-wrapper">
                             <h2 class="heading-primary">Inger Mette Stenseth</h2>
                             <h4 class="sub-heading">Norwegian sustainability advocate and educator</h4>
@@ -27,7 +27,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-5">
+                    <div class="col-lg-5 col-md-12">
                         <div class="banner-top">
                             <div class="banner-img">
                                 <img src="../images/visionaries/education-03.jpg" alt="" class="img-fluid"> 
