--- a/international-committee/Rickie-Dhillon.html
+++ b/international-committee/Rickie-Dhillon.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manish Jain</title>
+    <title>Rickie Dhillon</title>
     <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../vendor/css/bootstrap.min.css">
     <link rel="stylesheet" href="../vendor/css/owl.carousel.min.css">
@@ -18,16 +18,16 @@
         <section class="international-page p-top p-bottom">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-7">
+                    <div class="col-lg-7 col-md-12">
                         <div class="content-wrapper">
-                            <h2 class="heading-primary">Manish Jain</h2>
-                            <h4 class="sub-heading">Founder Shikshantar Andolan and Swaraj University</h4>
+                            <h2 class="heading-primary">Rickie Dhillon</h2>
+                            <h4 class="sub-heading">Superintendent/CEO of Kepler Neighborhood School in Fresno, California</h4>
                             <div class="content-para">
-                                <p>Manish Jain is the founder of Shikshantar Andolan and Swaraj University in Udaipur, India. A pioneer in alternative education, he advocates for self-designed learning, unschooling, and cultural regeneration. His initiatives include Creativity Adda and Learning Societies Unconference, which challenge traditional schooling systems and promote community-driven learning models. Jain’s work focuses on fostering creativity, gift culture, and urban organic farming. A graduate of Harvard and Brown universities, he actively engages in intercultural dialogue and filmmaking to inspire broader societal change.</p>
+                                <p>Rickie Dhillon is the Superintendent/CEO of Kepler Neighborhood School in Fresno, California. Since 2023, she has transformed the school into a thriving educational hub through innovative leadership and strategic planning. Dhillon’s expertise in business administration and urban education leadership has been instrumental in stabilizing operations and fostering student success. She actively contributes to community development through advisory roles with organizations like the California Teaching Fellow Foundation and Disability Advisory Commission. Her dedication extends to pursuing a Doctorate in Urban Education Leadership at USC.</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-5">
+                    <div class="col-lg-5 col-md-12">
                         <div class="banner-top">
                             <div class="banner-img">
                                 <img src="../images/visionaries/education-10.jpg" alt="" class="img-fluid"> 
