--- a/index.html
+++ b/index.html
@@ -236,72 +236,144 @@
                         </div>
                         <h4 class="heading-tertiary"><a href="international-committee/Inger-Mette-Stenseth.html" target="_blank">Inger Mette Stenseth</a>
                         </h4>
+                        <div class="content-para">
+                            <p>Norwegian sustainability advocate and educator</p>
+                        </div>
+                        <div class="text-center">
+                            <a href="international-committee/Inger-Mette-Stenseth.html" target="_blank">read more</a>
+                        </div>
                     </div>
                     <div class="educational-grid-item">
                         <div class="img-wrapper">
                             <img src="images/visionaries/education-04.jpg" alt="" class="img-fluid">
                         </div>
                          <h4 class="heading-tertiary"><a href="international-committee/manish-jain.html" target="_blank">Manish Jain</a></h4>
+                         <div class="content-para">
+                            <p>Founder Shikshantar Andolan and Swaraj University</p>
+                        </div>
+                        <div class="text-center">
+                            <a href="international-committee/manish-jain.html" target="_blank">read more</a>
+                        </div>
                     </div>
                     <div class="educational-grid-item">
                         <div class="img-wrapper">
                             <img src="images/visionaries/education-05.jpg" alt="" class="img-fluid">
                         </div>
                         <h4 class="heading-tertiary"><a href="international-committee/Vijay-Sinha.html" target="_blank">Vijay Sinha</a></h4>
+                        <div class="content-para">
+                            <p>Founder Skyline Architectural Consultants</p>
+                        </div>
+                        <div class="text-center">
+                            <a href="international-committee/Vijay-Sinha.html" target="_blank">read more</a>
+                        </div>
                     </div>
                     <div class="educational-grid-item">
                         <div class="img-wrapper">
                             <img src="images/visionaries/education-06.jpg" alt="" class="img-fluid">
                         </div>
                         <h4 class="heading-tertiary"><a href="international-committee/Jon-Corippo.html" target="_blank">Jon Corippo</a></h4>
+                        <div class="content-para">
+                            <p>Award-winning educator and EdTech innovator</p>
+                        </div>
+                        <div class="text-center">
+                            <a href="international-committee/Jon-Corippo.html" target="_blank">read more</a>
+                        </div>
                     </div>
                     <div class="educational-grid-item">
                         <div class="img-wrapper">
                             <img src="images/visionaries/education-08.jpg" alt="" class="img-fluid">
                         </div>
                         <h4 class="heading-tertiary"><a href="international-committee/Irmeli-Halinen.html" target="_blank">Irmeli Halinen</a></h4>
+                        <div class="content-para">
+                            <p>Former Head of Curriculum Development at the Finnish National Agency for Education</p>
+                        </div>
+                        <div class="text-center">
+                            <a href="international-committee/Irmeli-Halinen.html" target="_blank">read more</a>
+                        </div>
                     </div>
                     <div class="educational-grid-item">
                         <div class="img-wrapper">
                             <img src="images/visionaries/education-09.jpg" alt="" class="img-fluid">
                         </div>
                         <h4 class="heading-tertiary"><a href="international-committee/Aicha-Bah-Diallo.html" target="_blank">Aicha Bah Diallo</a></h4>
+                        <div class="content-para">
+                            <p>Former Minister of Education in Guinea</p>
+                        </div>
+                        <div class="text-center">
+                            <a href="international-committee/Aicha-Bah-Diallo.html" target="_blank">read more</a>
+                        </div>
                     </div>
                     <div class="educational-grid-item">
                         <div class="img-wrapper">
                             <img src="images/visionaries/education-10.jpg" alt="" class="img-fluid">
                         </div>
                         <h4 class="heading-tertiary"><a href="international-committee/Rickie-Dhillon.html" target="_blank">Rickie Dhillon</a></h4>
+                        <div class="content-para">
+                            <p>Superintendent/CEO of Kepler Neighborhood School in Fresno, California</p>
+                        </div>
+                        <div class="text-center">
+                            <a href="international-committee/Rickie-Dhillon.html" target="_blank">read more</a>
+                        </div>
                     </div>
                     <div class="educational-grid-item">
                         <div class="img-wrapper">
                             <img src="images/visionaries/education-11.jpg" alt="" class="img-fluid">
                         </div>
                         <h4 class="heading-tertiary"><a href="international-committee/Olivier-Ledoux.html" target="_blank">Olivier Ledoux</a></h4>
+                        <div class="content-para">
+                            <p>French sculptor celebrated for his participatory approach to art</p>
+                        </div>
+                        <div class="text-center">
+                            <a href="international-committee/Olivier-Ledoux.html" target="_blank">read more</a>
+                        </div>
                     </div>
                     <div class="educational-grid-item">
                         <div class="img-wrapper">
                             <img src="images/visionaries/education-01.jpg" alt="" class="img-fluid">
                         </div>
                         <h4 class="heading-tertiary"><a href="international-committee/Dr-Bharti-Gandhi.html" target="_blank">Dr. Bharti Gandhi</a></h4>
+                        <div class="content-para">
+                            <p>Co-Founder, City Montessori School (CMS), Child Psychologist</p>
+                        </div>
+                        <div class="text-center">
+                            <a href="international-committee/Dr-Bharti-Gandhi.html" target="_blank">read more</a>
+                        </div>
                     </div>
                     <div class="educational-grid-item">
                         <div class="img-wrapper">
                             <img src="images/visionaries/education-02.jpg" alt="" class="img-fluid">
                         </div>
                         <h4 class="heading-tertiary"><a href="international-committee/Dr-Sunita-Gandhi.html" target="_blank">Dr. Sunita Gandhi</a></h4>
+                        <div class="content-para">
+                            <p>Educator, Researcher, Author, and Innovator</p>
+                        </div>
+                        <div class="text-center">
+                            <a href="international-committee/Dr-Sunita-Gandhi.html" target="_blank">read more</a>
+                        </div>
                     </div>
                     <div class="educational-grid-item">
                         <div class="img-wrapper">
                             <img src="images/visionaries/education-13.jpg" alt="" class="img-fluid">
                         </div>
                         <h4 class="heading-tertiary"><a href="international-committee/Michaël-Feneux.html" target="_blank">Michaël Feneux</a></h4>
+                        <div class="content-para">
+                            <p>French artist, builder, and innovator specializing in zome construction</p>
+                        </div>
+                        <div class="text-center">
+                            <a href="international-committee/Michaël-Feneux.html" target="_blank">read more</a>
+                        </div>
                     </div>
                     <div class="educational-grid-item">
                         <div class="img-wrapper">
                             <img src="images/visionaries/education-12.jpg" alt="" class="img-fluid">
                         </div>
                         <h4 class="heading-tertiary"><a href="international-committee/Pirjo-Koivula.html" target="_blank">Pirjo Koivula</a></h4>
+                        <div class="content-para">
+                            <p>Finnish educator and policymaker known for her contributions to inclusive education and early intervention reforms</p>
+                        </div>
+                        <div class="text-center">
+                            <a href="international-committee/Pirjo-Koivula.html" target="_blank">read more</a>
+                        </div>
                     </div>
                 </div>
                 <div class="btn-wrapper text-center">
