--- a/program.html
+++ b/program.html
@@ -13,6 +13,10 @@
 </head>
 
 <body>
+    <div class="online-counselling">
+        <a href="https://forms.gle/A2PqCFi7486vxwwi6" target="_blank">Register for online
+            counselling</a>
+    </div>
     <header>
         <div class="container">
             <nav>
