--- a/international-committee/Rickie-Dhillon.html
+++ b/international-committee/Rickie-Dhillon.html
@@ -23,7 +23,9 @@
                             <h2 class="heading-primary">Rickie Dhillon</h2>
                             <h4 class="sub-heading">Superintendent/CEO of Kepler Neighborhood School in Fresno, California</h4>
                             <div class="content-para">
-                                <p>Rickie Dhillon is the Superintendent/CEO of Kepler Neighborhood School in Fresno, California. Since 2023, she has transformed the school into a thriving educational hub through innovative leadership and strategic planning. Dhillon’s expertise in business administration and urban education leadership has been instrumental in stabilizing operations and fostering student success. She actively contributes to community development through advisory roles with organizations like the California Teaching Fellow Foundation and Disability Advisory Commission. Her dedication extends to pursuing a Doctorate in Urban Education Leadership at USC.</p>
+                                <p>Rickie Dhillon is a visionary leader transforming financially distressed districts into thriving economic hubs. With a proven track record of driving growth, creating jobs, and improving quality of life, Rickie's expertise has made a lasting impact on underserved communities.</p>
+
+                                <p>>Her personal journey, from witnessing her hometown struggle with economic decline to becoming a catalyst for change, fuels her passion for revitalization. Rickie shares her innovative approach to economic transformation, inspiring leaders and communities to reimagine their own potential.</p>
                             </div>
                         </div>
                     </div>
